--- a/app/src/main/res/layout/activity_payments_list.xml
+++ b/app/src/main/res/layout/activity_payments_list.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        tools:context=".ui.PaymentsListActivity">
+        tools:context=".ui.paymentslist.PaymentsListActivity">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
