--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,21 +7,21 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_color"
+        android:background="@drawable/gradient_background"
+        android:gravity="center"
         tools:context=".ui.splash.SplashActivity">
 
+        <!--  TODO: Change the logo  -->
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:background="@color/white"
             android:contentDescription="@string/app_logo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:padding="@dimen/_8dp"
             app:srcCompat="@drawable/app_logo" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
