--- a/app/src/main/res/layout/fragment_add_new.xml
+++ b/app/src/main/res/layout/fragment_add_new.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.addnew.AddNewFragment">
+        tools:context=".ui.oldMain.addnew.AddNewFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline6"
