--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <!--  Main colors  -->
     <color name="dark_purple">#280062</color>
     <color name="purple">#4400a9</color>
+    <color name="purple_opacity_10">#1A4400a9</color>
+    <color name="light_gray">#c7c7c7</color>
 </resources>
